--- a/docs/release_notes.adoc
+++ b/docs/release_notes.adoc
@@ -6,16 +6,38 @@ include::include.adoc[]
 === Breaking Changes
 
 ==== New meaning of `>> _`
-The meaning of `>> _` has changed form "use the default response" to "return a stubbed value" (<<interaction_based_testing.adoc#_returning_a_default_response,Docs>>).
-The original behavior was only ever documented in the Javadocs and was basically the same to just omitting it.
-The only use-case was chained responses `>> "a" >> _ >> "b"`,
-but even here it is clearer to just use `null` or `{ callRealMethod() }` explicitly.
-With the new behavior, you can have a `Mock` or `Spy` return the same value as a `Stub` would.
+- The meaning of `>> _` has changed form "use the default response" to "return a stubbed value" (<<interaction_based_testing.adoc#_returning_a_default_response,Docs>>).
+  The original behavior was only ever documented in the Javadocs and was basically the same to just omitting it.
+  The only use-case was chained responses `>> "a" >> _ >> "b"`,
+  but even here it is clearer to just use `null` or `{ callRealMethod() }` explicitly.
+  With the new behavior, you can have a `Mock` or `Spy` return the same value as a `Stub` would.
 
 [source,groovy]
 ----
 subscriber.receive(_) >> _
 ----
+
+// tag::renamed-iteration-count-token[]
+- The token `#iterationCount` in unroll patterns was renamed to `#iterationIndex`.
+  If you use it somewhere, you have to manually change it to the new name
+  or you will get an `#Error:iterationCount` rendering instead.
+// end::renamed-iteration-count-token[]
+
+=== Misc
+
+// tag::fancy-iteration-naming[]
+- The default unroll pattern changed from the rather generic `#featureName[#iterationIndex]` to a more fancy
+  version that lists all data variables and their values additionally to the feature name and iteration index.
+  If you prefer to retain the old behaviour, you can set the system property `spock.globalUnrollPattern`
+  to the value `#featureName[#iterationIndex]` and you will get the same result as previously.
+// end::fancy-iteration-naming[]
+
+- If neither a parameter to the `@Unroll` annotation is given, nor the method name contains a `#`,
+  now the system property `spock.globalUnrollPattern` is inspected. If it is set to a non-blank string,
+  this value is used as unroll pattern.
+
+- `IterationInfo` now has a property for the `iterationIndex` and one for a map of data variable names to values.
+  This is typically not interesting for the average user, but might be helpful for authors of Spock extensions.
 
 == 2.0-M2 (2020-02-10)
 
@@ -173,7 +195,7 @@ a == b
 Additional message
 ----
 
-If you relied on this behavior to hide some output, or to prevent a stack overflow due to a self referenceing
+If you relied on this behavior to hide some output, or to prevent a stack overflow due to a self referencing
 data structure, then you need to move the condition into a separate method that just returns the boolean result.
 
 
