--- a/docs/release_notes.adoc
+++ b/docs/release_notes.adoc
@@ -71,7 +71,8 @@ subscriber.receive(_) >> _
 
 The token `#iterationCount` in unroll patterns was renamed to `#iterationIndex`.
 If you use it somewhere, you have to manually change it to the new name
-or you will get an `#Error:iterationCount` rendering instead.
+or the test will fail unless you disabled expression asserting,
+then you will get an `#Error:iterationCount` rendering instead.
 // end::renamed-iteration-count-token[]
 
 // tag::no-access-to-data-variables-in-data-pipes[]
@@ -104,6 +105,16 @@ a << [1, 2]
 b = a
 ----
 // end::no-access-to-data-variables-in-data-pipes[]
+
+// tag::assert-unroll-expressions-by-default[]
+==== Assert unroll expressions by default
+
+The system property `spock.assertUnrollExpressions` is not supported anymore.
+Instead the new default behavior is equal to having this property set to `true`.
+This means tests that were successful but had an `#Error:` name rendering will now fail.
+It can be set back to the old pre Spock 2.0 behaviour by setting
+`unroll { expressionsAsserted false }` in the Spock configuration file.
+// end::assert-unroll-expressions-by-default[]
 
 ==== For extension developers
 
@@ -154,12 +165,13 @@ a ; b ;; c
 // tag::fancy-iteration-naming[]
 - The default unroll pattern changed from the rather generic `#featureName[#iterationIndex]` to a more fancy
   version that lists all data variables and their values additionally to the feature name and iteration index.
-  If you prefer to retain the old behaviour, you can set the system property `spock.globalUnrollPattern`
-  to the value `#featureName[#iterationIndex]` and you will get the same result as previously.
+  If you prefer to retain the old behaviour, you can set the setting
+  `unroll { defaultPattern '#featureName[#iterationIndex]' }` in the Spock configuration file
+  and you will get the same result as previously.
 // end::fancy-iteration-naming[]
 
 - If neither a parameter to the `@Unroll` annotation is given, nor the method name contains a `#`,
-  now the system property `spock.globalUnrollPattern` is inspected. If it is set to a non-blank string,
+  now the configuration file setting `unroll { defaultPattern }` is inspected. If it is set to a non-`null` string,
   this value is used as unroll pattern.
 
 - `IterationInfo` now has a property for the `iterationIndex` and one for a map of data variable names to values.
@@ -222,6 +234,19 @@ def "I'll run everywhere but on Windows"() { ... }
 - The condition closures for `@IgnoreIf`, `@Requires` and `@PendingFeatureIf` can now access data variables
   if applied to a data driven feature. This has further implications that are documented in the respective
   documentation parts and JavaDocs.
+
+- Data driven features are now unrolled by default. `@Unroll` can still be used to specify a custom naming pattern.
+  A simple `@Unroll` without argument is not needed anymore except when undoing a spec-level `@Rollup` annotation
+  or if uprolling is disabled globally, so any simple `@Unroll` annotations can be removed from existing code. You
+  can verify this by looking at the test count which should not have been changed after you removed the simple
+  `@Unroll` annotations.
+
+- `@Rollup` can now be used on feature and spec level to explicitly roll up any feature where the reporting of single
+  iterations is not wanted.
+
+- The setting `unroll { enabledByDefault false }` in the Spock configuration file can be set to roll up all
+  features by default if not overwritten by explicit `@Unroll` annotations and thus reinstate the pre
+  Spock 2.0 behaviour.
 
 == 2.0-M2 (2020-02-10)
 
