Make @Requires repeatable (#1030)

--- a/docs/release_notes.adoc
+++ b/docs/release_notes.adoc
@@ -16,6 +16,8 @@ include::include.adoc[]
 
 - `@Issue` is now repeatable
 
+- `@Requires` is now repeatable
+
 - `@See` is now repeatable
 
 - `@Subject` is now repeatable
