Fix dead cross-page links on one-page variant (#1037)

--- a/docs/data_driven_testing.adoc
+++ b/docs/data_driven_testing.adoc
@@ -1,4 +1,4 @@
-= Data Driven Testing
+= [[data-driven-testing]]Data Driven Testing
 include::include.adoc[]
 
 Oftentimes, it is useful to exercise the same test code multiple times, with varying inputs and expected results.
